--- a/porfolio.html
+++ b/porfolio.html
@@ -12,16 +12,18 @@
      <!--debut header-->
 
     <header>
-            <h1>jean de salles's portfolio</h1>
+            <div>
+                <h1>jean de salles's portfolio</h1>
+            </div>
 
-        <div class="nav-bar">
+        <nav class="nav-bar">
             <ul>
                 <li><a href="#home">home</a></li>
                <li><a href="#about">about</a></li>
              <li><a href="#work" id="work">work</a></li>
                 <li><a href="#contacts" id="contact">contacts</a></li>
             </ul>
-        </div>
+        </nav>
     </header>
      <!--fin header-->
      
@@ -128,7 +130,7 @@
         </p>
         </footer>
     <!--fin footer-->
-    <strong class="droits">tout droits reservés</strong>
+    <strong class="droits">@jeandeSalles2024tout droits reservés</strong>
      <!--fin-->
 
 
